[package]
description = "Substrate offchain workers"
name = "sc-offchain"
version = "3.0.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bytes = "0.5"
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
fnv = "1.0.6"
futures = "0.3.9"
futures-timer = "3.0.1"
log = "0.4.8"
threadpool = "1.7"
num_cpus = "1.10"
sp-offchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
parking_lot = "0.11.1"
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
rand = "0.7.2"
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-network = { version = "0.9.0", path = "../sc-network" }
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
hyper = "0.13.9"
hyper-rustls = "0.21.0"

[dev-dependencies]
sc-client-db = { version = "0.9.0", default-features = true, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-block-builder = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test_utils/runtime/client" }
tokio = "0.2"
lazy_static = "1.4.0"

[features]
default = []
