[package]
name = "sc-service"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate service. Starts a thread that spins up the network, client, and extrinsic pool. Manages communication between them."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["db"]
# The RocksDB feature activates the RocksDB database backend. If it is not activated, and you pass
# a path to a database, an error will be produced at runtime.
db = ["sc-client-db/with-kvdb-rocksdb", "sc-client-db/with-parity-db"]
wasmtime = [
	"sc-executor/wasmtime",
]
# exposes the client type
test-helpers = []

[dependencies]
thiserror = "1.0.21"
futures01 = { package = "futures", version = "0.1.29" }
futures = { version = "0.3.4", features = ["compat"] }
jsonrpc-pubsub = "15.1"
jsonrpc-core = "15.1"
rand = "0.7.3"
parking_lot = "0.11.1"
lazy_static = "1.4.0"
log = "0.4.11"
futures-timer = "3.0.1"
wasm-timer = "0.2"
exit-future = "0.2.0"
pin-project = "1.0.4"
hash-db = "0.15.2"
serde = "1.0.101"
serde_json = "1.0.41"
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-trie = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-externalities = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-version = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-keystore = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-session = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-state-machine = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-application-crypto = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-network = { version = "0.9.0", path = "../sc-network" }
sc-chain-spec = { version = "3.0.0", path = "../sc-chain-spec" }
sc-light = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-client-db = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
codec = { package = "parity-scale-codec", version = "2.0.0" }
sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-rpc-server = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-block-builder = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-informant = { version = "0.9.0", path = "../sc-informant" }
sc-telemetry = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-offchain = { version = "3.0.0", path = "../sc-offchain" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0", version = "0.9.0"}
sc-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
tracing = "0.1.22"
tracing-futures = { version = "0.2.4" }
parity-util-mem = { version = "0.9.0", default-features = false, features = ["primitive-types"] }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
tempfile = "3.1.0"
directories = "3.0.1"

[dev-dependencies]
substrate-test-runtime-client = { version = "2.0.0", path = "../../test_utils/runtime/client" }
substrate-test-runtime = { version = "2.0.0", path = "../../test_utils/runtime" }
sp-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
grandpa = { version = "0.9.0", package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
grandpa-primitives = { version = "3.0.0", package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
tokio = { version = "0.2.25", default-features = false }
async-std = { version = "1.6.5", default-features = false }
tracing-subscriber = "0.2.15"
