[package]
name = "pallet-revenue-fund"
version = "1.0.0"
edition = "2021"
authors = ['Tung La']
description = "Revenue wallet"

[dependencies]
parity-scale-codec = { version = "2.0", features = ["derive"], default-features = false }
serde = '1.0'

# Substrate packages
pallet-balances = { version = '3.0', default-features = false }
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }
pallet-staking = {version = '3.0.0', default-features = false, path="../pallet-staking"}
pallet-session = {version = '3.0.0', default-features = false }

[dev-dependencies]
sp-core = '3.0'
sp-io = '3.0'

[features]
default = ['std']
std = [
	'pallet-balances/std',
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-runtime/std',
	'pallet-staking/std'
]