[package]
name = "pallet-revenue-sharing"
version = "3.0.0"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
frame-support = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-system = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-scale-codec = { version = "1.3.0", default-features = false }

[dev-dependencies]
sp-io = { version = "3.0.0", default-features = false }


[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    "frame-support/std",
    "sp-runtime/std",
    "frame-system/std",
    "sp-std/std",
    "sp-io/std",
    "sp-core/std",
    "parity-scale-codec/std"
]
with-serde = ["serde"]
