[package]
authors = ['Ylgr']
description = 'Revenue whitelisting services.'
edition = '2018'
license = 'GPL-3.0'
name = 'pallet-revenue'
version = '3.0.0'

[dependencies]
log = { version = "0.4" }
serde = { default-features = false, version = "1.0.101" }
codec = { package = "parity-scale-codec", default-features = false, version = "2.0.0" }
rustc-hex = { default-features = false, version = "2.0.1" }
#primitive-types = { version = "0.9", features = ["byteorder", "rustc-hex"],  default-features = false}

# substrate frame dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
ethereum-types = { version = "0.11", default-features = false }

getrandom = { version = "0.2.3", features = ["js"], default-features = false }

# local dependency
#support-lib = { path = "../support-lib"}
pallet-ethereum = { path = "../pallet-ethereum", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"

[features]
default = ['std']
std = [
    "serde/std",
    "rustc-hex/std",
    "codec/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "getrandom/std",
    "pallet-ethereum/std",
#    "primitive-types/std",
#    "support-lib/std",
    "ethereum-types/std",
]
