[package]
name = "pallet-transaction-payment"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet to manage transaction payments"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
smallvec = "1.4.1"
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }

[dev-dependencies]
serde_json = "1.0.41"
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-storage = { default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-core/std",
]
