[package]
name = "pallet-treasury"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet to manage treasury"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
impl-trait-for-tuples = "0.2.1"

frame-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0", optional = true }

[dev-dependencies]
sp-io ={ version = "3.0.0", git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-storage = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
