[package]
name = "support-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
primitive-types = { version = "0.9", features = ["byteorder", "rustc-hex"],  default-features = false}
getrandom = { version = "0.2", features = ["js"] }
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
rustc-hex = { default-features = false, version = "2.0.1" }
frame-system = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }

[features]
default = ['std']
std = [
    "primitive-types/std",
    "sp-std/std",
    "serde",
    "rustc-hex/std",
    "codec/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
]