[package]
name = "substrate-test-client"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
futures = "0.3.9"
futures01 = { package = "futures", version = "0.1.29" }
hash-db = "0.15.2"
hex = "0.4"
serde = "1.0.55"
serde_json = "1.0.55"
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-client-db = { version = "0.9.0", features = ["test-helpers"], git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-light = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-service = { version = "0.9.0", default-features = false, features = ["test-helpers"],  path = "../../client/sc-service" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-keystore = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-keyring = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-state-machine = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
