[package]
name = "sc-service-test"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
publish = false
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex-literal = "0.3.1"
tempfile = "3.1.0"
tokio = "0.1.22"
futures01 = { package = "futures", version = "0.1.29" }
log = "0.4.8"
fdlimit = "0.2.1"
parking_lot = "0.11.1"
sc-light = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-state-machine = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-externalities = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-trie = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-storage = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-client-db = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
futures = { version = "0.3.1", features = ["compat"] }
sc-service = { version = "0.9.0", default-features = false, features = ["test-helpers"], path = "../../sc-service" }
sc-network = { version = "0.9.0", path = "../../sc-network" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
substrate-test-runtime = { version = "2.0.0", path = "../../../test_utils/runtime" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test_utils/runtime/client" }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-block-builder = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-panic-handler = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
parity-scale-codec = "2.0.0"
sp-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
