[package]
name = "pallet-evm-precompile-dispatch"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/frontier/"
description = "DISPATCH precompiles for EVM pallet."

[dependencies]
sp-core = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-io = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
frame-support = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
pallet-evm = {  default-features = false, path = "../.." }
fp-evm = { default-features = false, path = "../../../../primitives/evm" }
evm = { git = "https://github.com/clover-network/evm.git", tag = "v0.27.1-clover", default-features = false, features = ["with-codec"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-evm/std",
	"fp-evm/std",
	"evm/std",
	"codec/std",
]
