[package]
name = "pallet-evm-precompile-ed25519"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/frontier/"
description = "ED25519 precompiles for EVM pallet."

[dependencies]
sp-core = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-io = {  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
fp-evm = { default-features = false, path = "../../../../primitives/evm" }
evm = { git = "https://github.com/clover-network/evm.git", tag = "v0.27.1-clover", default-features = false, features = ["with-codec"] }
ed25519-dalek = { version = "1.0.0", features = ["alloc", "u64_backend"], default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"fp-evm/std",
	"evm/std",
	"ed25519-dalek/std",
]
