[package]
name = "pallet-evm-precompile-sha3fips"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>", "Drew Stone <drew@commonwealth.im>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/frontier/"
description = "SHA3 FIPS202 precompile for EVM pallet."

[dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
fp-evm = { default-features = false, path = "../../../../primitives/evm" }
evm = { git = "https://github.com/clover-network/evm.git", tag = "v0.27.1-clover", default-features = false, features = ["with-codec"] }
tiny-keccak = { version = "2.0", features = ["fips202"] }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"fp-evm/std",
	"evm/std",
]
