[package]
name = "pallet-transaction-payment-rpc-runtime-api"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "RPC runtime API for transaction payment FRAME pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
pallet-transaction-payment = { default-features = false, path = "../../../pallet-transaction-payment" }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
	"sp-runtime/std",
	"pallet-transaction-payment/std",
]
